# antimeta-resume

./: README.md  pyproject.toml
docs/examples/: resume.json  resume_full.json
src/antimeta_resume/: __init__.py  __main__.py  cli.py  render.py  render_utils.py  settings.py
src/antimeta_resume/schemas/: __init__.py  base_schema.py  basics_location_schema.py  basics_schema.py  education_schema.py  project_schema.py  publication_schema.py  resume_schema.py  skill_schema.py  volunteer_schema.py  work_schema.py
src/antimeta_resume/theme/: index.html
src/antimeta_resume/theme/views/: projects.html
src/softworker/: cli.py  i18n.py  main.py  render.py  render_utils.py  settings.py
src/softworker/enums/: __init__.py  resume_language.py
theme/: i18n.json  index.html  style.css
theme/partials/: item-details.html  item-header.html  item.html
theme/views/: awards.html  basics.html  certifications.html  education.html  interests.html  languages.html  profiles.html  projects.html  publications.html  references.html  skills.html  summary.html  volunteer.html  work.html
