[project]
name = "antimeta-resume"
version = "1.0.0"
description = "Biblioteca Python para gerar currículos ATS-friendly em PDF a partir de dados estruturados em JSON."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "babel>=2.17.0",
    "markupsafe>=3.0.3",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.11.0",
    "resume-pycli>=4.1.1",
    "typer>=0.23.2",
    "weasyprint>=66.0",
    "yarl>=1.22.0",
]

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
antimeta_resume = [
    "theme/*.html",
    "theme/*.css",
    "theme/partials/*.html",
    "theme/views/*.html",
]
